# gto-poker-trainer

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  ENGINEERING_NOTES.md  LICENSE  MANIFEST.in  Makefile  PR_PLAN.md  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  render.yaml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
.venv-ci/: pyvenv.cfg
deploy/: Dockerfile  serve.example.toml
public/: app.js  index.html  styles.css
qa/: requirements.txt
qa/tests/: test_api.py
scripts/: check_health.py  check_render.py  check_web.py  run_benchmark.py  run_ci_tests.sh
src/: cards.rs  equity.rs  game.rs  lib.rs  main.rs  rival.rs  session.rs  trainer.rs
src/gto_poker_trainer/: __init__.py  cli.py
src/gto_poker_trainer/application/: session_service.py
src/gto_poker_trainer/core/: engine_core.py  formatting.py  interfaces.py  scoring.py
src/gto_poker_trainer/data/web/: index.html
src/gto_poker_trainer/dynamic/: generator.py  policy.py  range_model.py
src/gto_poker_trainer/ui/: presenters.py  textual_serve_main.py
src/gto_poker_trainer/web/: app.py
src/gto_poker_trainer_cli/: __init__.py  cli.py  engine_play.py
src/gto_poker_trainer_cli/application/: __init__.py  session_service.py
src/gto_poker_trainer_cli/core/: engine_core.py  formatting.py  interfaces.py  models.py
src/gto_poker_trainer_cli/data/web/: index.html
src/gto_poker_trainer_cli/dynamic/: cards.py  equity.py  generator.py  policy.py
src/gto_poker_trainer_cli/solver/: oracle.py
src/gto_poker_trainer_cli/ui/: presenters.py  textual_app.py  textual_main.py  textual_serve_main.py
src/gto_poker_trainer_cli/web/: app.py
src/gto_trainer/: __init__.py  __main__.py  cli.py  engine_play.py
src/gto_trainer/application/: __init__.py  session_engine.py  session_service.py
src/gto_trainer/core/: formatting.py  models.py  scoring.py
src/gto_trainer/data/web/: index.html
src/gto_trainer/dynamic/: cards.py  episode.py  equity.py  generator.py  hand_strength.py  policy.py  preflop_mix.py  range_model.py  rival_strategy.py  seating.py  villain_strategy.py
src/gto_trainer/features/: __init__.py
src/gto_trainer/features/session/: __init__.py  concurrency.py  router.py  service.py
src/gto_trainer/services/: __init__.py  session_v1.py
src/gto_trainer/solver/: oracle.py
src/gto_trainer/ui/: presenters.py  textual_app.py  textual_main.py  textual_serve_main.py
src/gto_trainer/web/: app.py
src/gto_trainer/web/templates/session/: summary.html
src/gtotrainer/: __init__.py  __main__.py
src/gtotrainer/analysis/: benchmark.py
src/gtotrainer/core/: engine_core.py  ev.py  feature_flags.py  formatting.py  scoring.py
src/gtotrainer/data/: range_loader.py
src/gtotrainer/data/ranges/: config.json  heads_up_ranges.json
src/gtotrainer/data/web/: index.html
src/gtotrainer/dynamic/: bet_sizing.py  cards.py  cfr.py  equity.py  generator.py  hand_state.py  hand_strength.py  policy.py  preflop_mix.py  range_model.py  range_sampling.py  rival_strategy.py
src/gtotrainer/features/session/: __init__.py  analysis.py  engine.py  router.py  schemas.py  service.py
src/gtotrainer/ui/: textual_app.py  textual_main.py  textual_serve_main.py
src/gtotrainer/web/: app.py
src/gtotrainer/web/templates/session/: choice.html  node.html
src/web/: mod.rs
tests/: autoplay.rs  cli.rs  conftest.py  equity.rs  rival.rs  session_decisions.rs  session_flow.rs  test_benchmark.py  test_bet_sizing_manager.py  test_betsizing_context.py  test_cards_unit.py  test_cfr_precision_flag.py  test_cfr_solver.py  test_dynamic_resolution_deep.py  test_e2e_deep.py  test_effective_ev.py  test_engine_core.py  test_engine_core_unit.py  test_engine_performance.py  test_equity_monte_carlo_precision.py  test_equity_regressions.py  test_equity_unit.py  test_feature_flags.py  test_feedback_breakdown_js.py  test_feedback_classifier_js.py  test_fold_terminal_unit.py  test_formatting_unit.py  test_generator_policy_unit.py  test_hand_state.py  test_play_e2e.py  test_policy_adapt.py  test_policy_cfr_integration.py  test_policy_ev_math_precision.py  test_policy_fold_model.py  test_policy_math_unit.py  test_policy_metadata.py  test_policy_nashconv.py  test_policy_option_limits.py  test_policy_precision.py  test_policy_range_weights.py  (+28 more)
tests/calibration/: policy_reference.json  reference_benchmark.json  reference_river_bet.json  test_benchmark_regression.py  test_policy_regression.py  test_river_bet_calibration.py
tests/core/: test_ev_conservation.py
tests/dynamic/: test_cfr_validation.py  test_equity_statistics.py  test_policy.py  test_preflop_mix.py  test_rival_calibration.py
ui-tests/: smoke.spec.ts
