[package]
name = "gto-trainer"
version = "0.1.0"
edition = "2024"
description = "Heads-up no-limit hold'em trainer implemented in Rust"
authors = ["GTO Trainer Maintainers"]
license = "Proprietary"
repository = "https://example.com/gto-trainer"
keywords = ["poker", "trainer", "gto", "cli", "web"]
categories = ["games"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
futures = "0.3"
itertools = "0.12"
owo-colors = "4.0"
parking_lot = "0.12"
rand = { version = "0.8", features = ["std", "small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.4"
thiserror = "1.0"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "sync", "time"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
assert_cmd = "2.0"
insta = { version = "1.39", features = ["json"] }
predicates = "3.1"
rand_chacha = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3.10"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
