[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gto-poker-trainer-cli"
version = "0.1.0"
description = "Poker GTO trainer (multi-street CLI)"
readme = "README.md"
requires-python = "==3.12.11"
authors = [{ name = "Your Name" }]
license = { text = "Proprietary" }
keywords = ["poker", "gto", "trainer", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: Other/Proprietary License",
  "Environment :: Console",
  "Topic :: Games/Entertainment",
]
dependencies = [
  "rich>=13.7",
  "treys>=0.1.8",
]

[project.scripts]
gto-poker-trainer-cli = "gto_poker_trainer_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-subprocess>=1.5",  # optional helper
  "ruff>=0.13.0",
  "fastapi>=0.111",
  "httpx>=0.27",
]



[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

# Ruff: linting, import sorting, and formatting
[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = [
  ".venv",
  ".idea",
  ".pytest_cache",
  "src/*.egg-info",
  "src/gtotrainer",  # legacy package kept out of lint until removed
  "build",
  "build/**",
  "dist",
  "dist/**",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # import sorting
  "B",  # flake8-bugbear
  "UP", # pyupgrade
  "SIM",# flake8-simplify
  "C4", # flake8-comprehensions
  "ARG",# flake8-unused-arguments
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"src/gto_poker_trainer_cli/__init__.py" = ["UP036"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["gto_poker_trainer_cli"]
